2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: IMediaObject::Dispose: clear the list of events
	we were supposed to emit on the main thread.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: IMediaDemuxer::Dispose: add a missing unref.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: IMediaDemuxer::Dispose: store a copy of our instance
	variables in local varaibles and clear out the instance variables
	before unreffing them - prevents certain rare cases of infinite loops.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: IMediaStream::Dispose: store a copy of our instance
	variables in local variables and clear out the instance variables
	before unreffing them - prevents certain rare cases of infinite loops.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Media::RetryHttp: we need to Dispose the previous
	source.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: MmsPlaylistEntry::Dispose: break a circular
	dependency between MmsPlaylistEntry and Media.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Media::Dispose: store a copy of our instance variables
	in local variables and clear out the instance variables before
	unreffing them - prevents certain rare cases of infinite loops.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: MarkerStream::Dispose: call base class' Dispose.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: Add a few missing unrefs.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: Add a MediaDisposObjectClosure that ensures that
	the closure is called.

	r: andreia

2009-08-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Add an invalid MediaResult value, so that MediaClosure